# tcpBridge

./: .gitignore  .gitmodules  ADAPTER_USER_AGREEMENT.txt  Move.toml  README.md
cli/: blockchain_oracle_template.move  bsv_config.toml  configs_template.rs  demo_setup.py  empty_wallet.json  python_cli.py  requirements.txt  tcpbridge_template.move  wallet_manager_ui.py
cli/bsv/: block_header.py  fetch_oracle_data.py  oracle_service.py  utils.py  wallet.py  zk_utils.py
cli/sui/: Cargo.toml
cli/sui/config_files/: config_add_bridge_entry.toml  config_check_bridge_entry.toml  config_drop_elapsed.toml  config_pegin.toml  config_pegout.toml  config_update_chain.toml
cli/sui/src/: bridge_cli.rs  cli.rs  configs.rs  main.rs  oracle_cli.rs  utils.rs
docs/: blockchain_oracle.md  future_work.md  python_cli.md  sui.md  system_design.md  tcpbridge.md  zk_engine.md
docs/diagrams/: classes.puml  componets.puml  sequence-bsv-to-sui.puml  sequence-sui-to-bsv.puml  sequence-wrapped-sui-transfer.puml  use-case.puml
move/bridge/: Move.toml  README.md
move/bridge/sources/: admin.move  backed_pool.move  tcpbridge.move  unbacked_pool.move
move/bridge/tests/: backed_pool_tests.move  unbacked_pool_tests.move
move/oracle/: Move.toml  README.md
move/oracle/sources/: block_header.move  spv.move  (+1 more)
sources/: admin.move  backed_pool.move  tcpbridge.move  transactions.move  txid.move  unbacked_pool.move
tests/: backed_pool_tests.move  tcpbridge_tests.move  transactions_tests.move  unbacked_pool.move  unbacked_pool_tests.move
zk_engine/: Cargo.toml
zk_engine/src/: main.rs
(+16 files in other folders)
